docs/api/0.2.0/ironwood/ds/ArrayLinkedList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ArrayLinkedList

**Class** · `ironwood.ds.ArrayLinkedList`

```java
public class ArrayLinkedList<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`ArrayLinkedList(int)`](#member-ArrayLinkedList-28-int-29-) |  |
| [`getArraySize()`](#member-getArraySize-28--29-) |  |
| [`addLast(E)`](#member-addLast-28-E-29-) |  |
| [`removeLast()`](#member-removeLast-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`clear(boolean)`](#member-clear-28-boolean-29-) | Removes all elements and optionally nulls the live fixed-array prefix. |
| [`iterator()`](#member-iterator-28--29-) |  |

## Constructors

<a name="member-ArrayLinkedList-28-int-29-"></a>

### `ArrayLinkedList(int)`

```java
public ArrayLinkedList(int arraySize)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getArraySize-28--29-"></a>

### `getArraySize()`

```java
public int getArraySize()
```


[Back to member summary](#member-summary)

<a name="member-addLast-28-E-29-"></a>

### `addLast(E)`

```java
public void addLast(E entry)
```


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public E removeLast()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-clear-28-boolean-29-"></a>

### `clear(boolean)`

```java
public void clear(boolean nullifyLiveArrayPrefix)
```

Removes all elements and optionally nulls the live fixed-array prefix.



When `nullifyLiveArrayPrefix` is `true`, only slots in the
current live fixed-array prefix are nulled. Inactive tail slots left by a
prior removal or `clear(false)` may remain unchanged. The active
linked overflow is cleared in either case. Neither option destroys
caller-owned elements or releases this list's caller-item loans before
destruction.

**Parameters**

| Name | Description |
| --- | --- |
| `nullifyLiveArrayPrefix` | whether to null slots in the current live fixed-array prefix |


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
