docs/api/0.2.2-beta/ironwood/ds/ArrayLinkedList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ArrayLinkedList

**Class** · `ironwood.ds.ArrayLinkedList`

```java
public class ArrayLinkedList<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Provides an array-backed linked list.


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`ArrayLinkedList(int)`](#member-ArrayLinkedList-28-int-29-) | Creates a new ArrayLinkedList. |
| [`getArraySize()`](#member-getArraySize-28--29-) | Returns the array size. |
| [`addLast(E)`](#member-addLast-28-E-29-) | Adds the supplied last. |
| [`removeLast()`](#member-removeLast-28--29-) | Performs the remove last operation. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`contains(E)`](#member-contains-28-E-29-) | Returns whether the supplied value is present. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`clear(boolean)`](#member-clear-28-boolean-29-) | Removes all elements and optionally nulls the live fixed-array prefix. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Constructors

<a name="member-ArrayLinkedList-28-int-29-"></a>

### `ArrayLinkedList(int)`

```java
public ArrayLinkedList(int arraySize)
```

Creates a new ArrayLinkedList.


[Back to member summary](#member-summary)

## Methods

<a name="member-getArraySize-28--29-"></a>

### `getArraySize()`

```java
public int getArraySize()
```

Returns the array size.


[Back to member summary](#member-summary)

<a name="member-addLast-28-E-29-"></a>

### `addLast(E)`

```java
public void addLast(E entry)
```

Adds the supplied last.


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public E removeLast()
```

Performs the remove last operation.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-contains-28-E-29-"></a>

### `contains(E)`

```java
public boolean contains(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-clear-28-boolean-29-"></a>

### `clear(boolean)`

```java
public void clear(boolean nullifyLiveArrayPrefix)
```

Removes all elements and optionally nulls the live fixed-array prefix.



When `nullifyLiveArrayPrefix` is `true`, only slots in the
current live fixed-array prefix are nulled. Inactive tail slots left by a
prior removal or `clear(false)` may remain unchanged. The active
linked overflow is cleared in either case. Neither option destroys
caller-owned elements or releases this list's caller-item loans before
destruction.

**Parameters**

| Name | Description |
| --- | --- |
| `nullifyLiveArrayPrefix` | whether to null slots in the current live fixed-array prefix |


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
